--- a/statistics.html
+++ b/statistics.html
@@ -51,7 +51,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-30238'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-30238'>Principal Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -84,7 +84,7 @@
 <p>4 days ago ... Each of these marketing channels center around a rich central problem from 
 deriving value from sparse data to auction theory and game theory all with the?...</p>
 <hr/>
-<h5><a href='https://ppdi.referrals.selectminds.com/jobs/principal-biostatistician-3469'>Principal Biostatistician - PPD Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/principal-biostatistician-3469'>Principal Biostatistician - PPD Careers</a></h5> 
 <p><span class="badge badge-light">North Carolina, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -240,7 +240,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premier-research/job/oyrAafwt'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/oyrAafwt'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -291,7 +291,7 @@ and ... and a good understanding of conversion data structure standards (SDTM)
 <p>Jul 10, 2019 ... Careers That Change Lives The Principal Statistician will be responsible for 
 statistical aspects of study design and analysis of data from complex...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/nanostring/jobs/4352434002'>Job Application for Senior Biostatistician at NanoString</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nanostring/jobs/4352434002'>Job Application for Senior Biostatistician at NanoString</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -348,7 +348,7 @@ standards (ADaM) and a good understanding of conversion data structure?...</p>
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://goldcorp.referrals.selectminds.com/jobs/geostatistican-specialist-2043'>Geostatistican Specialist - Goldcorp Careers</a></h5> 
+<h5><a href='https://goldcorp.referrals.selectminds.com/jobs/geostatistican-specialist-2043'>Geostatistican Specialist - Goldcorp Careers</a></h5> 
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -365,7 +365,7 @@ Biometrics team in Belfast, Northern Ireland. This role is responsible for the?.
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/concertohealthai/3f605bd2-7c0d-4abe-bc60-37e64e591538'>Concerto HealthAI - Healthcare Statistician</a></h5> 
+<h5><a href='https://jobs.lever.co/concertohealthai/3f605bd2-7c0d-4abe-bc60-37e64e591538'>Concerto HealthAI - Healthcare Statistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -390,7 +390,7 @@ Biometrics team in Belfast, Northern Ireland. This role is responsible for the?.
 <p>3 days ago ... Principal Data Scientist - Statistician. Venice, CA. Data Science. Full-time. Submit 
 your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read?...</p>
 <hr/>
-<h5><a href='https://gsk.wd5.myworkdayjobs.com/GSKCareers/job/USA---Maryland---Rockville/Expert-Biostatistician_214332'>Expert Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gsk.wd5.myworkdayjobs.com/GSKCareers/job/USA---Maryland---Rockville/Expert-Biostatistician_214332'>Expert Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Experience with Bayesian methods. ? Experience of statistical programming (e.g., 
 in SAS, R, Python). ? Experience with CDISC data format (SDTM and ADAM).</p>
