--- a/data-science.html
+++ b/data-science.html
@@ -57,7 +57,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SprySquaredInc/743999692394323-data-scientist-manager'>Spry Squared, Inc. Data Scientist Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SprySquaredInc/743999692394323-data-scientist-manager'>Spry Squared, Inc. Data Scientist Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Greeley, CO, USA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -65,7 +65,7 @@
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fanatics/8e3c18f5-c648-4c82-8f62-d90cb3be3c59'>Fanatics - Senior Data Scientist - Demand Forecasting / Supply Chain Science</a></h5> 
+<h5><a href='https://jobs.lever.co/fanatics/8e3c18f5-c648-4c82-8f62-d90cb3be3c59'>Fanatics - Senior Data Scientist - Demand Forecasting / Supply Chain Science</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -101,7 +101,7 @@
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://h2oai.applytojob.com/apply/1PpI3hq6wW/Customer-Data-Scientist-Solution-Architect-USParisMunich'>Customer Data Scientist / Solution Architect (US/Paris/Munich) - h2o.ai - Career Page</a></h5> 
+<h5><a href='http://h2oai.applytojob.com/apply/1PpI3hq6wW/Customer-Data-Scientist-Solution-Architect-USParisMunich'>Customer Data Scientist / Solution Architect (US/Paris/Munich) - h2o.ai - Career Page</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -146,7 +146,7 @@ delivering actionable insights on crop health directly to the field meaning farm
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://spartantalent.uncg.edu/postings/14702'>UNC Greensboro Employment Opportunities | Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://spartantalent.uncg.edu/postings/14702'>UNC Greensboro Employment Opportunities | Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -174,7 +174,7 @@ have?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/skupos/02c66a59-0c37-4494-99e3-596857d6924a'>Skupos - Senior Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/skupos/02c66a59-0c37-4494-99e3-596857d6924a'>Skupos - Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light">Denver San Francisco</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -187,7 +187,7 @@ have?...</p>
 <p><span class="badge badge-light">Toronto, Ontario, Canada Toronto</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://smartnews.workable.com/j/37270B89CA'>SmartNews, Inc. - Jobs: Data Science Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/37270B89CA'>SmartNews, Inc. - Jobs: Data Science Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan Tokyo</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -250,7 +250,7 @@ you to adverse treatment). Tubular Labs is a Government contractor subject to?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oFmCafwx'>The Climate Corporation Careers - Data Scientist - Big Data</a></h5> 
+<h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oFmCafwx'>The Climate Corporation Careers - Data Scientist - Big Data</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -281,7 +281,7 @@ Scientist ? Assistant Director drives forward the Business Value Creation...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tempus/jobs/4368937002'>Job Application for Lead Data Scientist, Applied Machine Learning at Tempus</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tempus/jobs/4368937002'>Job Application for Lead Data Scientist, Applied Machine Learning at Tempus</a></h5> 
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -289,7 +289,7 @@ Scientist ? Assistant Director drives forward the Business Value Creation...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Apply online for the job of Data Scientist at CACI Ltd.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thehutgroup.workable.com/j/37F3E68EDA?viewed=true'>The Hut Group - Jobs: Fraud Junior Data Scientist - Apply online</a></h5> 
+<h5><a href='https://thehutgroup.workable.com/j/37F3E68EDA?viewed=true'>The Hut Group - Jobs: Fraud Junior Data Scientist - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Fraud Junior Data Scientist at The Hut Group.</p>
 <hr/>
@@ -352,7 +352,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light">Shanghai Shanghai, China</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://definedcrowd.recruitee.com/o/data-scientist-natural-language-processing'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://definedcrowd.recruitee.com/o/data-scientist-natural-language-processing'>
       Data Scientist ? Natural Language Processing - DefinedCrowd
     </a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
@@ -427,7 +427,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/568e30d9-0d34-4cf3-84c0-16e0a82ce541'>GOJEK - Data Scientist, Recommendations</a></h5> 
+<h5><a href='https://jobs.lever.co/gojek/568e30d9-0d34-4cf3-84c0-16e0a82ce541'>GOJEK - Data Scientist, Recommendations</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -457,7 +457,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 and artificial intelligence advances? In an increasingly connected world, massive
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-MD-Columbia-7200-Riverwood-Dr/Data-Scientist--Senior_R0062237-1'>Data Scientist, Senior</a></h5> 
+<h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-MD-Columbia-7200-Riverwood-Dr/Data-Scientist--Senior_R0062237-1'>Data Scientist, Senior</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 12, 2019 ... Are you fascinated by the possibilities presented by the IoT, machine learning, 
 and artificial intelligence advances? In an increasingly connected world, massive
